# v-lkan_25_12_2

./: .coverage  COMPLETION_SUMMARY.md  Claude-Sonnet-4.5.txt  Claude-haiku-4.5.txt  Dockerfile  FINAL_SUMMARY.txt  INDEX.md  PROJECT_DELIVERABLES.md  PROJECT_SUMMARY.md  QUICKSTART_CN.md  QUICK_START.md  README.md  README_CONFLICT_DETECTION.md  README_START_HERE.md  SAMPLE_OUTPUTS.md  TEST_REPORT.md  TEST_REPORT_TEMPLATE.md  config.py  conflict_analysis_results.jsonl  conflict_detector.py  conflict_report.md  conflicts_only.jsonl  conflicts_output.jsonl  main.py  oswe-large-rapd-m4s90.txt  oswe-mini-secondary.txt  output.jsonl  pyproject.toml  pytest.ini  raptor-secondary.txt  requirements.txt  run_analysis.py  run_full_analysis.bat  setup.bat  setup.ps1  setup.sh  test_conflict_detector.py  test_report.txt  tickets_label.jsonl  utils.py
conflict_detector/: __init__.py  cli.py  core.py  models.py
output/: all.jsonl  conflict_analysis_report.md  conflict_analysis_results.jsonl  conflicts.jsonl  conflicts_only.jsonl
reports/: README.md  junit.xml  test_report_template.md
src/conflict_resolver/: __init__.py  detector.py  main.py  resolver.py
src/tickets_conflict/: __init__.py  cli.py  io.py  logic.py
src/tickets_conflict.egg-info/: SOURCES.txt
tests/: test_cli.py  test_conflict_detection.py  test_core.py  test_dataset_conflicts.py  test_detector.py  test_main_integration.py  test_resolver.py
venv_conflict/Scripts/: activate  activate.bat
