[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tickets_conflict"
version = "0.1.0"
description = "Multi-annotator ticket conflict detection and resolution"
authors = [{ name = "ghcpd" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
